<resources>
    <string name="app_name">TestTaskAx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_postId">Комментарий к сообщению с id: %d</string>
    <string name="title_id_comment">Комментарий с id: %d</string>
    <string name="title_email_author">E-mail: %s</string>
    <string name="title_name_author">Автор: %s</string>
    <string name="title_id_post">К сообщению с id: %d</string>
    <string name="title_name">От пользователя: %s</string>
    <string name="title_date">Получено: %s</string>
    <string name="title_timer">Обновление через: %s сек</string>
    <string name="title_update">Информация обновлена</string>
    <string name="title_widget_fragment">Список комментариев</string>
    <string name="title_comment_view">Комментарий</string>
    <string name="title_text_view">В %s оставил(а) комментарий:</string>
    <string name="error_loading">Ошибка при загрузки данных</string>
    <string name="retry_loading">Повторить</string>
</resources>